# 511-proj2-ABD

./: CMakeLists.txt  README.md
client/: client.h  client_funcs.c  client_main.c  client_rpc.cpp  client_rpc.h
proto/: abdalgorithm.grpc.pb.cc  abdalgorithm.grpc.pb.h  abdalgorithm.pb.cc  abdalgorithm.pb.h  abdalgorithm.proto
server/: server.h  server_funcs.c  server_rpc.cpp
shared/: config.txt  shared_abd.h
